--- a/RepositoryPattern/appsettings.json
+++ b/RepositoryPattern/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DataContext": "Host=localhost;Database=repository;Username=satire;Password=100%Satire"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
