add: completed CQRS demo

--- a/CQRSMediatorPattern/CQRSMediatRDemo/appsettings.json
+++ b/CQRSMediatorPattern/CQRSMediatRDemo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DataContext": "Host=localhost;Database=cqrsdemo;Username=satire;Password=100%Satire"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
