add: setup database connection

--- a/CQRSMediatorPattern/CQRSMediatRMovie/appsettings.json
+++ b/CQRSMediatorPattern/CQRSMediatRMovie/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DataContext": "Server=localhost;Database=avenger;Username=satire;Password=100%Satire"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
