add: few corrections and fixes

--- a/CQRSMediatorPattern/CQRSMediatRMovie/appsettings.json
+++ b/CQRSMediatorPattern/CQRSMediatRMovie/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DataContext": "Server=localhost;Database=avenger;Username=satire;Password=100%Satire"
+    "DataContext": "Server=localhost;Database=cqrsmovie;Username=satire;Password=100%Satire"
   },
   "Logging": {
     "LogLevel": {
