--- a/CleanArchitecture/CleanArchitectureDemo/Infrastructure/Infrastructure/Infrastructure.Infrastructure.csproj
+++ b/CleanArchitecture/CleanArchitectureDemo/Infrastructure/Infrastructure/Infrastructure.Infrastructure.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Application\Core.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
