--- a/CleanArchitecture/CleanArchitectureDemo/Presentation/API/Presentation.API.csproj
+++ b/CleanArchitecture/CleanArchitectureDemo/Presentation/API/Presentation.API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\Infrastructure\Infrastructure.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Persistence\Infrastructure.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
